2007-10-26  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (MOD_0F2B_PREFIX_0...MOD_0F2B_PREFIX_3): New.
	(MOD_0F51): Likewise.
	(MOD_0FD7): Likewise.
	(MOD_0FE7_PREFIX_2): Likewise.
	(MOD_0F382A_PREFIX_2): Likewise.
	(MOD_0F71_REG_2): Updated.
	(MOD_0FF0_PREFIX_3): Likewise.
	(MOD_62_32BIT): Likewise.
	(dis386_twobyte): Use MOD_0F51 and  MOD_0FD7.
	(prefix_table): Use MOD_0F2B_PREFIX_0...MOD_0F2B_PREFIX_3,
	MOD_0FE7_PREFIX_2 and MOD_0F382A_PREFIX_2.
	(mod_table): Add MOD_0F2B_PREFIX_0...MOD_0F2B_PREFIX_3,
	MOD_0F51, MOD_0FD7 and MOD_0F382A_PREFIX_2.

2007-10-26  Nick Clifton  <nickc@redhat.com>

	* arm-dis.c (print_insn): Check for a symtab that exists but is
	empty.

2007-10-24  Alan Modra  <amodra@bigpond.net.au>

	* po/POTFILES.in: Regenerate.

2007-10-23  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (OP_SIMD_Suffix): Renamed to ...
	(CMP_Fixup): This.  Rewrite.
	(OPSIMD): Renamed to ...
	(CMP): This. Updated.
	(prefix_table): Update PREFIX_0FC2 entry.

2007-10-22  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (prefix_table): Reordered by opcode.
	(mod_table): Likewise.

2007-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (prefix_table): Use XS on psrldq and pslldq.

2007-10-17  Nathan Sidwell  <nathan@codesourcery.com>

	* m68k-opc.c (m68k_opcodes): Correct move sr and ccr masks for
	coldfire.

2007-10-15  Peter Bergner  <bergner@vnet.ibm.com>

	* ppc-opc.c (powerpc_opcodes): Fix the first two operands of
	dquaiq. to use the TE and FRT macros.

2007-10-15  Peter Bergner  <bergner@vnet.ibm.com>

	* ppc-opc.c (TE): Correct signedness.
	(powerpc_opcodes): Sort psq_st and psq_stu according to major
	opcode number.

2007-10-15  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (dis386_twobyte): Reformat.
	(prefix_table):  Likewise.
	(three_byte_table): Likewise.

2007-10-15  Alan Modra  <amodra@bigpond.net.au>

	* mcore-dis.c (print_insn_mcore): Protect "fprintf" var against
	macro expansion.

2007-10-12  H.J. Lu  <hongjiu.lu@intel.com>
